--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -14,6 +14,11 @@
     </head>
     <body>
         <h1> Selamat data di website portofolio saya </h1>
+        <ul>
+            <li><a href="/">Home</li>
+            <li><a href="/blog">Blog</li>
+            <li><a href="/kontak">Kontak</li>
+        </ul>
         <script src="" async defer></script>
     </body>
 </html>
