--- a/mysite/blog/templates/blog/index.html
+++ b/mysite/blog/templates/blog/index.html
@@ -3,5 +3,6 @@
 {% block head_title %}{{title}} | {{developer}} {% endblock head_title %}
 
 {% block content %}
-    <h1> Welcome to my {{title}} </h1>
+<h1> Welcome to {{title}} </h1>
 {% endblock content %}
+        
